--- a/index.html.html
+++ b/index.html.html
@@ -294,13 +294,13 @@
           
           <h2 class="fw-normal">Bögre</h2>
           <p>Nagyhatású, Az igazi programozóknak való bögre, ha nem veszel nem vagy programozó!</p>
-          <p><a class="btn btn-secondary" href="Bogre4.html">View details »</a></p>
+          <p><a class="btn btn-secondary" href="Bogre4.html">Nézd meg >></a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <img src="img/pollakbeanie.png" alt="">
           <h2 class="fw-normal">Téli sapka</h2>
-          <p></p>
-          <p><a class="btn btn-secondary" href="#">View details »</a></p>
+          <p>Télen fázol?, nincs jobb mint egy pollák sapka!! Vedd meg!!!</p>
+          <p><a class="btn btn-secondary" href="">Nézd meg >></a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg"
